Ok printable version, ugly online. Work on content

--- a/cv/cv.html
+++ b/cv/cv.html
@@ -1,127 +1,261 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+</head>
+
 <body>
-<div>
-    <h1>Experience</h1>
-    <div>
-        <h2>2014-2022 Swissquote Bank, Gland</h2>
-        <h3> Digital Assets Institutional</h3>
-        2022
-        Working on new provider integration
-        Hypersistence as part of data persistence community
-        Onboarding new comers
 
-        <h3> Crypto team </h3>
-        2021
-        Onboarding new comers
-        Regrouping advices for crypto to banking package
-        Working on settlements for crypto institutional crypto clients
-        Centralizing notifications of trades to our partner bitstamp
-        Splitting component and improving performance
+<div class="floating-stuff">
+    <div class="header">
+        <!--        <div id="picture">-->
+        <!--            <img src="img/pearSlice-s.png" width="64" height="64">-->
+        <!--        </div>-->
+        <div id="header-content">
+            <h1 class="name">Pascal Scheiben</h1>
+            <p>I'm a <b>java software engineer</b> focused on java backend with 8 years of experience.<br> Currently open to new
+                position and technologies.</p>
+        </div>
+    </div>
 
-        2020
-        Integration with two new partners (b&j) using external exchange provider for institutional clients
-        Working on crypto settlement flow for institutional clients.
-        Working on crypto reporter, daemon to provide reports for controlling and reconciliation teams
-        Integration of new crypto currencies with Coinbase
 
-        2019
-        Working on deposit and withdrawals of some currencies through bitstamp's API
-        Internal admin tool to handle flow
 
-        2018
-        Collaboration with other teams to provide information about crypto currencies to rest of bank
-        Working on application that feeds crypto price feed to rest of bank (redis)
-        Using blockcypher to check wallet balances
-        Company shift from Hg to Git -> handling migrations of team's project
-
-        2017
-        Working on admin tool to handle crypto currencies statistics and configuration
-
-        Adding more cryptos, on same provider
-
-        <h3> Treasury </h3>
-        2017
-
-        Initial phase of crypto currencies -> bitcoin, working on connectivity with Bitstamp, internal oms and client facing UI
-        (working in colaboration with other team to update closing service/admin tool to include crypto, intergration with banking package T24)
-
-        Callinator
-
-        Working on currency hedging application and services
-
-        2016
-        Audit trail soa
-
-        Create new plugin in internal admin tools to display client risk margins.
-
-        Working on marginator
-
-        Maintaining and improving application to provide daily executions blotter file.
-
-        Migrating in jar library to exchange currencies and provide treasury operations to newly designed web services.
-
-        2015
-        Admin tool platform for treasury users with plugin to set up client fees and currency properties on forex currencies.
-        Working on corresponding db structure in backend.
-        Migration spread configuration from old system.
+    <div class="contact-pdf">
+        <div class="contact-pdf-line-1">
+            <div>N/A online</div>
+            <div>N/A online</div>
+            <div>N/A online</div>
+            <div>N/A online</div>
+        </div>
 
 
     </div>
 
-    <div>
-        <h2>2014 Civil Service at TRANSP-OR (4 months) EPFL, Lausanne</h2>
-        Optimization and distribution of Biogeme
-        # Optimization of existing C++ and Python code
-        Modification of the object representation of the equations,
-        led to memory gain and running time improvement.
-        # Implementation of a WebUI with CherryPy, HTML5/CSS and javascript.
-        # Distribution on Win/OSX/Unix platforms using cmake tools and cygwin.
-    </div>
-    <div>
-        <h2>2013-2014 Master Thesis at DISAL (1 semester) EPFL, Lausanne</h2>
-        Social Robots: Interactive Gaming among Multiple Humans and Mobile Robots
-        # Usage of Webots to create simulations of the game.
-        # Creation of a flexible ROS architecture in C++ to handle the game both
-        in simulation and real world.
-        # Acquisition of the robots position via an overhead camera using SwisTrack.
-        # Implementation of the display of the game using a Qt window to render
+    <div class="contact-online">
+        <div>Find me on</div>
 
-        OpenGL components. Representation of the game on the floor using an over-
-        head projector.
-    </div>
-    <div>
-        <h2>2013 Internship at Mobile Devices (6 months) Villejuif, France</h2>
-        Mandatory internship for EPFL
-        # Maintenance and optimization of mobile apps for connected GPS devices on
-        the in-house Morpheus SDK based on Java
-        # Implementation of proxies using Ruby and Redis.
+        <div class="contact-links">
+            <a href="www.linkedin.com/in/pascal-scheiben"><img src="img/linkedin.png"
+                                                               style="width:16px;height:16px;"></a>
+            <a href="https://github.com/PearSlice"><img src="img/github.png" style="width:16px;height:16px;"></a>
+            <a href="https://medium.com/@pearslice"><img src="img/medium.png" style="height:16px;"></a>
+            <a href="mailto://pascal.scheiben@the-one-from-google.com"><img src="img/email.png"
+                                                                            style="width:16px;height:16px;"></a>
+        </div>
     </div>
 
-    <div>
-        <h2>2010-2012 Teaching Assistant EPFL, Lausanne</h2>
-        for variousintroduction coursesin Java, C and bash
-        # Helping with exercises on basic OOP concepts.
-        # Explaining simple CLI tools.
-        (with Prof. Jamila Sam, Dr. Thomas Lochmatter and Dr. Jean-Philipe Pellet)
+</div>
+
+
+<div class="content">
+
+
+    <div id="xp">
+        <div class="section">
+            <h1>Experience</h1>
+            <div>
+                <h2 class="date-container">
+                    <div>Swissquote Bank, Gland</div>
+                    <div class="date">2022 - 2014</div>
+                </h2>
+                <h3 class="date-container">
+                    <div> Digital Assets Institutional</div>
+                    <div class="date">2022</div>
+                </h3>
+                <!--                2022-->
+                <p>Improving <b>JPA</b> and <b>Hibernate</b> usage with <a href="https://vladmihalcea.com/hypersistence-optimizer/">Hypersistence</a>
+                    as part of data persistence community.</p>
+                <p>Working on new provider integration. Onboarding newcomers.</p>
+
+                <h3 class="date-container">
+                    <div>Crypto team</div>
+                    <div class="date"> 2021 - 2017</div>
+                </h3>
+                <!--                2021-->
+                <p class="omit-in-pdf">Onboarding new comers</p>
+                <p>Regrouping advices for crypto transactions of same order to banking package. Centralizing notifications of trades to bitstamp.</p>
+                <p>Working on settlements for crypto institutional crypto clients.</p>
+                <p>Helping splitting component and improving performance after high load during crypto price drop.</p>
+
+                <!--                2020-->
+                <p class="omit-in-pdf">Integration with two new partners using external exchange provider for institutional clients.</p>
+                <p>Working on crypto settlement flow for institutional clients.</p>
+                <p>Working on crypto reporter, daemon to provide reports for controlling and reconciliation teams.</p>
+                <p class="omit-in-pdf">Integration of new crypto currencies with Coinbase.</p>
+
+                <!--                2019-->
+                <p>Working on deposit and withdrawals of some crypto currencies through bitstamp's <b>API</b>.</p>
+                <p>Creating DB queries in <b>sql</b> for reconciliation team.</p>
+
+                <!--                2018-->
+                <p>Collaboration with other teams to provide information about crypto currencies to rest of bank.</p>
+                <p>Providing cryptocurrencies price feed to rest of bank <b>redis</b> distributed cache.</p>
+                <p class="omit-in-pdf">Using blockcypher to check wallet balances.</p>
+                <p class="omit-in-pdf">Company shift from Hg to Git -> handling migrations of team's project.</p>
+
+                <!--                2017-->
+                <p>Working on internal admin tool to handle crypto currencies statistics and configuration.</p>
+                <p class="omit-in-pdf">Adding more cryptos, on same provider.</p>
+
+                <h3 class="date-container">
+                    <div>Treasury</div>
+                    <div class="date">2017 - 2014</div>
+                </h3>
+                <!--                2017-->
+                <p>
+                    Initial phase of crypto currencies at Swissquote, working on connectivity with Bitstamp through <b>REST</b> and <b>websocket</b>, internal
+                    <b>order management system</b> and client UI.<br>
+                    Working in collaboration with other team to updates closing admin tool to include crypto,
+                    integration with banking package</p>
+
+                <p>Callinator, internal hackaton project. Small application connection to internal <b>LDAP</b> in order to dial
+                    on Cisco phone.</p>
+
+                <p class="omit-in-pdf">Working on currency hedging application and services</p>
+
+                <!--                2016-->
+                <p class="omit-in-pdf">Audit trail service</p>
+
+                <p>Working on marginator, daemon that compute change risk and warns operator if below acceptable margins.
+                    Creation of new internal admin tools to display client risk margins.</p>
+
+                <p>
+                    Maintaining and improving application to provide daily executions blotter file. Polling database and
+                    building report as csv file.
+                </p>
+                <p>Migrating in jar library to exchange currencies and provide treasury operations to newly designed web
+                    services.
+                </p>
+
+                <!--                2015-->
+                <p>Admin tool platform for treasury users with plugin to set up client fees and currency properties on
+                    forex currencies. Working on corresponding db structure in backend. Migration spread configuration from
+                    old system.</p>
+            </div>
+        </div>
+
+
+        <div>
+            <h2 class="date-container">
+                <div>Civil Service at TRANSP-OR, EPFL, Lausanne</div>
+                <div class="date">2014 (4months)</div>
+            </h2>
+            <h3>Optimization and distribution of <a href="https://biogeme.epfl.ch/">Biogeme (v2)</a></h3>
+            <p>Optimization of C++ and Python code.
+                Modification of representation of the equations,
+                memory gain and running time improvement.</p>
+            <p>Implementation of a WebUI with CherryPy, HTML5/CSS and js. Distribution on Win/OSX/Unix using cmake tools
+                and cygwin.</p>
+        </div>
+        <div class="cheating-page-break">
+            <h2 class="date-container">
+                <div>Master Thesis at DISAL, EPFL, Lausanne</div>
+                <div class="date">2014 - 2013 (1 semester)</div>
+            </h2>
+            <h3>Social Robots: Interactive Gaming among Multiple Humans and Mobile Robots</h3>
+            <p>
+                Usage of Webots to create simulations of the game.
+                Creation of a flexible ROS architecture in C++ to handle the game both
+                in simulation and real world.<br>
+                Acquisition of the robots position via an overhead camera using SwisTrack.
+                Implementation of the display of the game using a Qt window to render OpenGL components.
+                Representation of the game on the floor using an over-head projector.</p>
+        </div>
+        <div>
+            <h2 class="date-container">
+                <div>Internship at Mobile Devices, Villejuif, France</div>
+                <div class="date">2013 (6 months)</div>
+            </h2>
+            <h3>Mandatory internship for EPFL</h3>
+            <p>
+                Maintenance and optimization of mobile apps for connected GPS devices on
+                the in-house Morpheus SDK based on Java.<br>
+                Implementation of proxies using Ruby and Redis.
+            </p>
+        </div>
+
+        <div>
+            <h2 class="date-container">
+                <div>Teaching Assistant EPFL, Lausanne</div>
+                <div class="date">2012 - 2010</div>
+            </h2>
+            <h3>Student assistant in multiple "101" programming courses</h3>
+            <p>Helping with exercises on basic OOP concepts and explaining simple CLI tools for various introduction
+                courses in Java, C and bash.<br>
+                (with Prof. Jamila Sam, Dr. Thomas Lochmatter and Dr. Jean-Philipe Pellet)
+            </p>
+        </div>
+        <div>
+            <h2 class="date-container">
+                <div>Ba and Ma Semester Project at DSLAB EPFL, Lausanne</div>
+                <div class="date">2011 (2 semesters)</div>
+            </h2>
+            <p>
+            <h3>Pocketcampus: a mobile application for EPFL campus</h3>
+            <p>Taking part in the development of the Android app plugins to access the directory, transport and bicycle
+                parts.<br>
+                Implementation of the backend in Java for the same parts.
+            </p>
+
+        </div>
     </div>
-    <div>
-        <h2>2011 Bachelor and Master Semester Project at DSLAB (2 semesters) EPFL, Lausanne</h2>
-        Pocketcampus: a mobile application for EPFL campus
-        # Taking part in the development of the Android app.
-        Implementation of the directory, transport and bicycle parts.
-        # Implementation of the backend in Java for the same parts.
+
+    <div id="side">
+        <div class="section" id="skills">
+            <h1>Skills</h1>
+            <p>Java, Spring, Hibernate, HTTP, sql, docker, rabbitMQ, Redis, Python, git, mercurial, unix, javascript, C, akka, k8s</p>
+        </div>
+
+        <div class="section" id="languages">
+            <h1>Languages</h1>
+
+            <div class="language-container">
+                <div>French</div>
+                <div class="language-desc">Mother tongue</div>
+            </div>
+            <div class="language-container">
+                <div>English</div>
+                <div class="language-desc">Full professional pro efficiency</div>
+            </div>
+            <div class="language-container">
+                <div>(CH-)German</div>
+                <div class="language-desc">Basic understanding</div>
+            </div>
+
+        </div>
+
+        <div class="section" id="education">
+            <h1>Education</h1>
+            <p>
+            <div class="date-container">
+                <div> Master in Computer Science EPFL</div>
+                <div class="date">2014 - 2012</div>
+            </div>
+            <div class="date-container">
+                <div> Bachelor in Computer Science EPFL</div>
+                <div class="date">2011 - 2007</div>
+            </div>
+<!--            <div class="date-container">-->
+<!--                <div> CMS (Cours de Math&eacute;matique Sp&eacute;ciales) EPFL, Lausanne</div>-->
+<!--                <div class="date">2007 - 2005</div>-->
+<!--            </div>-->
+<!--            <div class="date-container">-->
+<!--                <div> CFC with professional maturity in Computer Science CPLN, Neuch&acirc;tel</div>-->
+<!--                <div class="date">2004 - 2001</div>-->
+<!--            </div>-->
+            </p>
+        </div>
+
     </div>
 </div>
 
-<div>
-    Education
-    2012-2014 Master in Computer Science EPFL, Lausanne
-    2007-2011 Bachelor in Computer Science EPFL, Lausanne
-    2005-2007 CMS (Cours de Mathématique Spéciales) EPFL, Lausanne
-    2001-2004 CFC with professional maturity in Computer Science CPLN, Neuchâtel
+<div id="footer">
+    <div class="section" id="hobbies">
+        <h1>Other Activities / Interests</h1>
+        <p>Judo, climbing, skiing, board/video games, home automation</p>
+    </div>
 </div>
 
-<div>
-    Other Activities / Interests
-    Judo, climbing, skiing, home automation, board/video games
-</div>
+
 </body>
